--- a/code/site/src/pages/home/home.html
+++ b/code/site/src/pages/home/home.html
@@ -40,11 +40,11 @@
     </div>
     <!--end of preloading-->
     <!--login form popup-->
-    <div class="login-wrapper" id="login-content">
+    <div class="login-wrapper" action="../service/login.php" id="login-content">
         <div class="login-content">
             <a class="close">x</a>
             <h3>Accedi</h3>
-            <form method="post" action="../service/login.php" id="login-form">
+            <form method="post" id="login-form">
                 <div class="row">
                     <label for="username">
                         Username o email:
@@ -65,46 +65,6 @@
             </form>
         </div>
     </div>
-    <script>
-        document.getElementById('login-form').addEventListener('submit', function (event) {
-            event.preventDefault();
-
-            var username = document.getElementById('username').value;
-            var password = document.getElementById('password').value;
-
-            fetch('../service/login.php', {
-                method: 'POST',
-                body: new URLSearchParams({ username: username, password: password })
-            })
-                .then(response => response.json())
-                .then(data => {
-                    if (data.success) {
-                        // Login riuscito, ricarica la pagina
-                        window.location.reload();
-                    } else {
-                        // Login fallito, mostra il messaggio di errore
-                        document.getElementById('login-error-message').style.visibility = 'visible';
-                        document.getElementById('login-error-message').textContent = data.message;
-                        document.getElementById('password').value = '';
-                    }
-                })
-                .catch(error => {
-                    console.error('Errore durante la richiesta di login:', error);
-                    // Gestisci l'errore in base alle tue esigenze
-                });
-        });
-
-        var usernameInput = document.getElementById('username');
-        var passwordInput = document.getElementById('password');
-
-        usernameInput.addEventListener('input', hideErrorMessage);
-        passwordInput.addEventListener('input', hideErrorMessage);
-
-        function hideErrorMessage() {
-            document.getElementById('login-error-message').style.visibility = 'hidden';
-        }
-    </script>
-
     <!--end of login form popup-->
     <!--signup form popup-->
     <div class="login-wrapper" id="signup-content">
@@ -156,63 +116,6 @@
             </form>
         </div>
     </div>
-    <script>
-        document.getElementById('signup-form').addEventListener('submit', function (event) {
-            event.preventDefault();
-
-            var nome = document.getElementById('name').value;
-            var cognome = document.getElementById('surname').value;
-            var username = document.getElementById('username-2').value;
-            var email = document.getElementById('email-2').value;
-            var password = document.getElementById('password-2').value;
-            var repassword = document.getElementById('repassword-2').value;
-
-            if (password !== repassword) {
-                document.getElementById('signup-error-message').textContent = 'Le password non corrispondono';
-                document.getElementById('signup-error-message').style.visibility = 'visible';
-                return;
-            }
-
-            fetch('../service/signup.php', {
-                method: 'POST',
-                body: new URLSearchParams({ nome: nome, cognome: cognome, username: username, email: email, password: password })
-            })
-                .then(response => response.json())
-                .then(data => {
-                    if (data.success) {
-                        // Registrazione riuscita
-                        window.location.reload();
-                    } else {
-                        // Registrazione fallita, mostra il messaggio di errore
-                        document.getElementById('signup-error-message').textContent = data.message;
-                        document.getElementById('signup-error-message').style.visibility = 'visible';
-                    }
-                })
-                .catch(error => {
-                    console.error('Errore durante la richiesta di registrazione:', error);
-                    // Gestisci l'errore in base alle tue esigenze
-                });
-        });
-
-        // Aggiungi event listener agli input per nascondere il messaggio d'errore
-        var nomeInput = document.getElementById('name');
-        var cognomeInput = document.getElementById('surname');
-        var usernameInput = document.getElementById('username-2');
-        var emailInput = document.getElementById('email-2');
-        var passwordInput = document.getElementById('password-2');
-        var repasswordInput = document.getElementById('repassword-2');
-
-        nome.addEventListener('input', hideErrorMessage);
-        cognome.addEventListener('input', hideErrorMessage);
-        usernameInput.addEventListener('input', hideErrorMessage);
-        emailInput.addEventListener('input', hideErrorMessage);
-        passwordInput.addEventListener('input', hideErrorMessage);
-        repasswordInput.addEventListener('input', hideErrorMessage);
-
-        function hideErrorMessage() {
-            document.getElementById('signup-error-message').style.visibility = 'hidden';
-        }
-    </script>
     <!--end of signup form popup-->
 
     <!-- BEGIN | Header -->
@@ -627,12 +530,11 @@
                                 <div class="trailer-img">
                                     <?php
 										if ($programma['copertina'] != null) {
-											echo '<img src="data:image/jpeg;base64,' . base64_encode($programma['copertina']) . '" alt="" width="4096" height="2737">
-                                ';
-                                } else {
-                                echo '<img src="../../images/uploads/slider1.jpg" alt="" width="4096" height="2737">';
-                                }
-                                ?>
+											echo '<img src="data:image/jpeg;base64,' . base64_encode($programma['copertina']) . '" alt="" width="4096" height="2737"> ';
+                                        } else {
+                                            echo '<img src="../../images/uploads/slider1.jpg" alt="" width="4096" height="2737">';
+                                        }
+                                    ?>
                                 </div>
                                 <div class="trailer-infor">
                                     <h4 class="desc">
@@ -710,6 +612,7 @@
     <script src="../../js/plugins.js"></script>
     <script src="../../js/plugins2.js"></script>
     <script src="../../js/custom.js"></script>
+    <script src="../../js/moviemania.js"></script>
 </body>
 
 </html>
