--- a/code/site/src/pages/profilo/userfavoritelist.html
+++ b/code/site/src/pages/profilo/userfavoritelist.html
@@ -148,19 +148,19 @@
 					</ul>
 					<ul class="nav navbar-nav flex-child-menu menu-right">
 						<?php 
-								if($utente == null) {
-									echo '<li class="loginLink"><a>Accedi</a></li>';
-									echo '<li class="btn signupLink"><a>Registrati</a></li>';
+							if($utente == null) {
+								echo '<li class="loginLink"><a>Accedi</a></li>';
+								echo '<li class="btn signupLink"><a>Registrati</a></li>';
+							} else {
+								if ($utente['foto'] != null) {
+									echo '<img src="data:image/jpeg;base64,' . base64_encode($utente['foto']) . '" alt="" width="40" height="40">';
 								} else {
-									if ($utente['foto'] != null) {
-										echo '<img src="data:image/jpeg;base64,' . base64_encode($utente['foto']) . '" alt="" width="40" height="40">';
-									} else {
-										echo '<img src="../../images/uploads/user.jpg" alt="" width="40" height="40">';
-									}
-									echo '<li><a href="../profilo/profilo.php">' . $utente['nome'] . '</a></li>';
-									echo '<li><a href="../service/logout.php">Disconetti</a></li>';
+									echo '<img src="../../images/uploads/user.jpg" alt="" width="40" height="40">';
 								}
-							?>
+								echo '<li><a href="../profilo/profilo.php">' . $utente['nome'] . '</a></li>';
+								echo '<li><a href="../service/logout.php">Disconetti</a></li>';
+							}
+						?>
 					</ul>
 				</div>
 				<!-- /.navbar-collapse -->
@@ -205,121 +205,136 @@
 									echo '<img id="foto" src="../../images/uploads/user.jpg" alt="" width="120" height="120"></a><br>';
 								}
 							?>
-							<label class="redbtn">
-								<input id="fileInput" style="display: none;" type="file" />
-								Cambia foto
+							<label class="redbtn" for="fotoInput" class="upload-button">
+								Carica immagine
 							</label>
+							<input type="file" style="display: none;" id="fotoInput" accept=".jpg, .jpeg">
 						</div>
 						<div class="user-fav">
 							<p>Le mie sezioni</p>
 							<ul>
 								<li><a href="profilo.php">Profilo</a></li>
 								<li class="active"><a href="preferiti.php">I miei preferiti</a></li>
-								<li><a href="userrate.html">Le mie recensioni</a></li>
+								<li><a href="recensioni.php">Le mie recensioni</a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-9 col-sm-12 col-xs-12">
 					<div class="topbar-filter user">
-						<p>Found <span>1,608 movies</span> in total</p>
-						<label>Sort by:</label>
-						<select>
-							<option value="range">-- Choose option --</option>
-							<option value="saab">-- Choose option 2--</option>
-						</select>
-						<a href="userfavoritelist.html" class="list"><i class="ion-ios-list-outline active"></i></a>
-						<a href="userfavoritegrid.html" class="grid"><i class="ion-grid "></i></a>
+						<p><span>
+								<?php echo $numero_preferiti . ' programmi'?>
+							</span> in totale</p>
 					</div>
 					<div class="flex-wrap-movielist user-fav-list">
+						<?php 
+						foreach($programmiPreferiti as $programma){
+							if($programma['tipo'] === 'film'){
+								$personaggi = $personaggiController->getPersonaggiByFilm($programma['id']);
+							}else{
+								$personaggi = $personaggiController->getPersonaggiBySerie($programma['id']);
+							}
+						?>
 						<div class="movie-item-style-2">
-							<img src="images/uploads/mv1.jpg" alt="">
+							<?php
+								if ($programma['copertina'] != null) {
+									echo '<img src="data:image/jpeg;base64,' . base64_encode($programma['copertina']) . '" alt="" width="170" height="261">';
+								} else {
+									echo '<img src="../../images/uploads/slider1.jpg" alt="" width="170" height="261">';
+								}
+							?>
 							<div class="mv-item-infor">
-								<h6><a href="#">oblivion <span>(2012)</span></a></h6>
-								<p class="rate"><i class="ion-android-star"></i><span>8.1</span> /10</p>
-								<p class="describe">Earth's mightiest heroes must come together and learn to fight as a
-									team if they are to stop the mischievous Loki and his alien army from enslaving
-									humanity...</p>
-								<p class="run-time"> Run Time: 2h21’ . <span>MMPA: PG-13 </span> . <span>Release: 1 May
-										2015</span></p>
-								<p>Director: <a href="#">Joss Whedon</a></p>
-								<p>Stars: <a href="#">Robert Downey Jr.,</a> <a href="#">Chris Evans,</a> <a href="#">
-										Chris Hemsworth</a></p>
+								<h6>
+									<a href="
+											<?php
+												if($programma['tipo'] === 'film'){ 
+													echo '../moviesingle/moviesingle.php?id=' . $programma['id'];
+												}else{
+													echo '../seriessingle/seriessingle.php?id=' . $programma['id'];
+												}
+											?>">
+										<?php echo $programma['titolo'] ?> <span>
+											<?php echo '(' . date('Y', strtotime($programma['data_pubblicazione'])) . ')'; ?>
+										</span>
+									</a>
+								</h6>
+								<p class="rate"><i class="ion-android-star"></i>
+									<span>
+										<?php echo $programma['media_voti']; ?>
+									</span>
+									/10
+								</p>
+								<p class="describe">
+									<?php echo troncaStringa($programma['descrizione'], 300); ?>
+								</p>
+								<p class="run-time">
+									<?php 
+										if($programma['tipo'] === 'film') {
+											echo $programma['durata'] . ' minuti';
+										}
+										else {
+											echo $programma['numero_stagioni'] . ' stagioni';
+										}
+									?>
+									<span>
+										<?php
+											$date = new DateTime($programma['data_pubblicazione']);
+											$date_formatter = new IntlDateFormatter('it_IT', IntlDateFormatter::LONG, IntlDateFormatter::NONE);
+											$formatted_date = $date_formatter->format($date);
+											echo $formatted_date;
+										?>
+									</span>
+								</p>
+								<p>
+									<?php
+										echo "Regia di: ";
+										$registi = [];
+										foreach ($personaggi as $personaggio) {
+											if ($personaggio['ruolo'] === 'Regista') {
+												$registi[] = '<a href="../celebritysingle/celebritysingle.php?id=' . $personaggio['id'] . '">'
+													. $personaggio['nome'] . ' ' . $personaggio['cognome'] . '</a>';
+											}
+										}
+										echo implode(', ', $registi);
+									?>
+								</p>
+								<p>
+									<?php
+										echo "Stars: ";
+										$star = [];
+										foreach ($personaggi as $personaggio) {
+											if ($personaggio['star']) {
+												$star[] = '<a href="../celebritysingle/celebritysingle.php?id=' . $personaggio['id'] . '">'
+													. $personaggio['nome'] . ' ' . $personaggio['cognome'] . '</a>';
+											}
+										}
+										echo implode(', ', $star);
+									?>
+								</p>
 							</div>
 						</div>
-						<div class="movie-item-style-2">
-							<img src="images/uploads/mv2.jpg" alt="">
-							<div class="mv-item-infor">
-								<h6><a href="#">into the wild <span>(2014)</span></a></h6>
-								<p class="rate"><i class="ion-android-star"></i><span>7.8</span> /10</p>
-								<p class="describe">As Steve Rogers struggles to embrace his role in the modern world,
-									he teams up with a fellow Avenger and S.H.I.E.L.D agent, Black Widow, to battle a
-									new threat...</p>
-								<p class="run-time"> Run Time: 2h21’ . <span>MMPA: PG-13 </span> . <span>Release: 1 May
-										2015</span></p>
-								<p>Director: <a href="#">Anthony Russo,</a><a href="#">Joe Russo</a></p>
-								<p>Stars: <a href="#">Chris Evans,</a> <a href="#">Samuel L. Jackson,</a> <a href="#">
-										Scarlett Johansson</a></p>
-							</div>
-						</div>
-						<div class="movie-item-style-2">
-							<img src="images/uploads/mv3.jpg" alt="">
-							<div class="mv-item-infor">
-								<h6><a href="#">blade runner <span>(2015)</span></a></h6>
-								<p class="rate"><i class="ion-android-star"></i><span>7.3</span> /10</p>
-								<p class="describe">Armed with a super-suit with the astonishing ability to shrink in
-									scale but increase in strength, cat burglar Scott Lang must embrace his inner hero
-									and help...</p>
-								<p class="run-time"> Run Time: 2h21’ . <span>MMPA: PG-13 </span> . <span>Release: 1 May
-										2015</span></p>
-								<p>Director: <a href="#">Peyton Reed</a></p>
-								<p>Stars: <a href="#">Paul Rudd,</a> <a href="#"> Michael Douglas</a></p>
-							</div>
-						</div>
-						<div class="movie-item-style-2">
-							<img src="images/uploads/mv4.jpg" alt="">
-							<div class="mv-item-infor">
-								<h6><a href="#">Mulholland pride<span> (2013) </span></a></h6>
-								<p class="rate"><i class="ion-android-star"></i><span>7.2</span> /10</p>
-								<p class="describe">When Tony Stark's world is torn apart by a formidable terrorist
-									called the Mandarin, he starts an odyssey of rebuilding and retribution.</p>
-								<p class="run-time"> Run Time: 2h21’ . <span>MMPA: PG-13 </span> . <span>Release: 1 May
-										2015</span></p>
-								<p>Director: <a href="#">Shane Black</a></p>
-								<p>Stars: <a href="#">Robert Downey Jr., </a> <a href="#"> Guy Pearce,</a><a
-										href="#">Don Cheadle</a></p>
-							</div>
-						</div>
-						<div class="movie-item-style-2">
-							<img src="images/uploads/mv5.jpg" alt="">
-							<div class="mv-item-infor">
-								<h6><a href="#">skyfall: evil of boss<span> (2013) </span></a></h6>
-								<p class="rate"><i class="ion-android-star"></i><span>7.0</span> /10</p>
-								<p class="describe">When Tony Stark's world is torn apart by a formidable terrorist
-									called the Mandarin, he starts an odyssey of rebuilding and retribution.</p>
-								<p class="run-time"> Run Time: 2h21’ . <span>MMPA: PG-13 </span> . <span>Release: 1 May
-										2015</span></p>
-								<p>Director: <a href="#">Alan Taylor</a></p>
-								<p>Stars: <a href="#">Chris Hemsworth, </a> <a href="#"> Natalie Portman,</a><a
-										href="#">Tom Hiddleston</a></p>
-							</div>
-						</div>
+						<?php } ?>
 					</div>
 					<div class="topbar-filter">
-						<label>Movies per page:</label>
+						<label>Programmi per pagina:</label>
 						<select>
-							<option value="range">5 Movies</option>
-							<option value="saab">10 Movies</option>
+							<option value="range">5 Programmi</option>
+							<option value="saab">10 Programmi</option>
 						</select>
 
 						<div class="pagination2">
-							<span>Page 1 of 2:</span>
-							<a class="active" href="#">1</a>
-							<a href="#">2</a>
-							<a href="#">3</a>
-							<a href="#">...</a>
-							<a href="#">78</a>
-							<a href="#">79</a>
+							<span>Pagina 1 di
+								<?php 
+									echo max(ceil($numero_preferiti/5),1);
+								?>:
+							</span> <!-- Da fare con AJAX-->
+							<?php 
+								for($i=1; $i<=$numero_preferiti/5; $i++) {
+							?>
+							<a href="#">
+								<?php echo $i ?>
+							</a>
+							<?php } ?>
 							<a href="#"><i class="ion-arrow-right-b"></i></a>
 						</div>
 					</div>
@@ -332,7 +347,7 @@
 		<div class="container">
 			<div class="flex-parent-ft">
 				<div class="flex-child-ft item1">
-					<a href="index.html"><img class="logo" src="images/logo1.png" alt=""></a>
+					<a href="home.php"><img class="logo" src="../../images/logo1.png" alt=""></a>
 					<p>5th Avenue st, manhattan<br>
 						New York, NY 10001</p>
 					<p>Call us: <a href="#">(+01) 202 342 6789</a></p>
@@ -377,7 +392,7 @@
 		</div>
 		<div class="ft-copyright">
 			<div class="ft-left">
-				<p>© 2017 Blockbuster. All Rights Reserved. Designed by leehari.</p>
+				<p>© 2023 MovieMania. All Rights Reserved.</p>
 			</div>
 			<div class="backtotop">
 				<p><a href="#" id="back-to-top">Back to top <i class="ion-ios-arrow-thin-up"></i></a></p>
