--- a/code/site/src/pages/seriessingle/seriessingle.html
+++ b/code/site/src/pages/seriessingle/seriessingle.html
@@ -30,6 +30,8 @@
 </head>
 
 <body>
+	<!--toast-->
+	<div id="toast-container"></div>
 	<!--preloading-->
 	<div id="preloader">
 		<img class="logo" src="../../images/logo1.png" alt="" width="119" height="58">
@@ -210,11 +212,20 @@
 								</div>
 							</div>
 
-							<div class="btn-transform transform-vertical yellow">
-								<div><a href="#" class="item item-1 yellowbtn"> <i class="ion-edit"></i>
-										Scrivi una recensione</a>
+							<div id="recensione" class="btn-transform transform-vertical yellow">
+								<div>
+									<a href="#" class="item item-1 yellowbtn">
+										<i class="ion-edit"></i>
+										<?php 
+                                            if($recensione) echo 'Modifica recensione';
+                                            else echo 'Scrivi una recensione';
+                                        ?>
+									</a>
 								</div>
-								<div><a href="#" class="item item-2 yellowbtn hvr-grow"><i class="ion-edit"></i></a>
+								<div>
+									<a class="item item-2 yellowbtn hvr-grow">
+										<i class="ion-edit"></i>
+									</a>
 								</div>
 							</div>
 						</div>
@@ -236,9 +247,14 @@
 								?>
 							</span>
 						</h1>
+						<?php if($utente){ ?>
 						<div class="social-btn">
-							<a href="#" class="parent-btn"><i class="ion-heart"></i> Aggiungi ai preferiti</a>
+							<a id="preferiti" class="parent-btn"><i
+									class="<?php echo $preferito ? 'ion-android-remove' : 'ion-heart' ?>"></i>
+								<?php echo $preferito ? 'Rimuovi dai preferiti' : 'Aggiungi ai preferiti' ?>
+							</a>
 						</div>
+						<?php } ?>
 						<div class="movie-rate">
 							<div class="rate">
 								<i class="ion-android-star"></i>
@@ -251,17 +267,29 @@
 								</p>
 							</div>
 							<div class="rate-star">
-								<p>Dai un voto a questo film: </p>
-								<i class="ion-ios-star editable-star" data-rating=1></i>
-								<i class="ion-ios-star-outline editable-star" data-rating=2></i>
-								<i class="ion-ios-star-outline editable-star" data-rating=3></i>
-								<i class="ion-ios-star-outline editable-star" data-rating=4></i>
-								<i class="ion-ios-star-outline editable-star" data-rating=5></i>
-								<i class="ion-ios-star-outline editable-star" data-rating=6></i>
-								<i class="ion-ios-star-outline editable-star" data-rating=7></i>
-								<i class="ion-ios-star-outline editable-star" data-rating=8></i>
-								<i class="ion-ios-star-outline editable-star" data-rating=9></i>
-								<i class="ion-ios-star-outline editable-star" data-rating=10></i>
+								<p>
+									<?php 
+                                        if($recensione) echo 'Hai valutato questa serie:';
+                                        else echo 'Dai un voto a questa serie:';
+                                    ?>
+								</p>
+								<?php 
+                                    if($recensione){
+                                        $rate = intval($recensione['voto']);
+                                        $classe = '';  
+                                    }
+                                    else{
+                                        $rate =1;
+                                        $classe = 'editable-star';
+                                    }
+                                    for($i = 0; $i < 10; $i++) {
+                                        if($i < $rate) { ?>
+								<i class="ion-ios-star <?php echo $classe ?>" data-rating="<?php echo $i + 1 ?>"></i>
+								<?php } else { ?>
+								<i class="ion-ios-star-outline <?php echo $classe ?>"
+									data-rating="<?php echo $i + 1 ?>"></i>
+								<?php }
+                                } ?>
 							</div>
 						</div>
 						<div class="movie-tabs">
